fix resize of control on mobile breakpoint

--- a/css/breaks.css
+++ b/css/breaks.css
@@ -3,4 +3,9 @@
         width: 85vw;
         height: 85vw;
     }
+
+    #control {
+        width: 85vw;
+        height: 85vw;
+    }
 }
